--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,18 @@ a class="header-link link"*/
 .link:hover {
   color: #2196f3;
 }
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
 
 /*header*/
 .header {
@@ -200,5 +212,3 @@ a class="header-link link"*/
 .main-btn {
   cursor: pointer;
 }
-
-
