--- a/css/styles.css
+++ b/css/styles.css
@@ -25,13 +25,18 @@ ol {
   margin: 0;
   padding-left: 0;
 }
-button {
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+.button {
   cursor: pointer;
 }
-address {
+.address {
   font-style: normal;
 }
-img {
+.img {
   display: block;
 }
 .container {
@@ -62,6 +67,7 @@ img {
 .content-btn {
   cursor: pointer;
 }
+
 .header-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
