--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,8 @@ ol {
 }
 .link {
   text-decoration: none;
+  display: flex;
+  align-items: center;
 }
 .span-logo {
   color: #2196f3;
@@ -120,6 +122,14 @@ ol {
 
 .content-btn {
   cursor: pointer;
+  background-color: #2196f3;
+  color: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  border-radius: 4px;
   padding: 10px 32px;
   display: inline-block;
 }
