--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,14 @@
-.site-body {
-  font-family: "Roboto", sans-serif;
+.body {
+  font-family: Roboto, sans-serif;
   background: #ffffff;
+  color: #212121;
+  letter-spacing: 0.03em;
 }
-
-.link:hover {
-  color: #2196f3;
+.list {
+  list-style: none;
+}
+.link {
+  text-decoration: none;
 }
 p,
 h1,
@@ -20,38 +24,36 @@ ol {
   margin: 0;
   padding-left: 0;
 }
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-.button {
+button {
   cursor: pointer;
 }
-.address {
+address {
   font-style: normal;
 }
-.img {
+img {
   display: block;
-}
-
-/*header*/
-.header {
-  background: #ffffff;
-  padding-top: 24px;
-  padding-bottom: 24px;
-}
-.nav {
-  display: flex;
-  align-items: center;
+  max-width: 100%;
+  height: auto;
 }
 .container {
+  width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  width: 1170px;
-  padding: 0 15px;
+  padding-left: 15px;
+  padding-right: 15px;
   outline: 2px solid tomato;
 }
+.logo {
+  font-family: Raleway, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  color: #2196f3;
+  align-items: center;
+  text-align: center;
+}
+
 .header-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -60,107 +62,91 @@ ol {
   letter-spacing: 0.03em;
   color: #000000;
 }
-.link {
-  text-decoration: none;
+
+.header {
+  border-bottom: 1px solid #ececec;
+}
+
+.nav {
   display: flex;
   align-items: center;
 }
-.span-logo {
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+.header-logo {
+}
+
+.header-nav-list {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav-item {
+  display: flex;
+  align-items: center;
+}
+.header-nav-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+  display: flex;
+  align-items: center;
+}
+.header-nav-link.current {
   color: #2196f3;
 }
-.header-list {
-  display: flex;
-  align-items: center;
-}
-.list {
-  list-style: none;
-  display: flex;
-  align-items: center;
-}
 
-.header-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #212121;
-  display: flex;
-  align-items: center;
-}
-.header-item .current {
+.current {
   color: #2196f3;
 }
-.header-mail {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #757575;
+.header-contact-list {
+  display: flex;
+  align-items: center;
 }
-.header-tel {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #757575;
+.header-contact-item {
 }
-
-.visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
+.header-contact-link {
 }
-
-/*header*/
-
-.content-btn {
-  cursor: pointer;
-  background-color: #2196f3;
-  color: #ffffff;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  border-radius: 4px;
-  padding: 10px 32px;
-  display: inline-block;
+.hero {
+  padding-top: 200px;
+  padding-bottom: 280px;
+  background-color: #2f303a;
+  text-align: center;
 }
-
-/*Content*/
-.hero-content {
-  background: #2f303a;
-}
-
-.content-title {
+.hero-title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+
   color: #ffffff;
 }
-.content-btn {
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  color: #ffffff;
+.hero-btn {
+  display: inline-block;
+  width: 216px;
+  height: 50px;
+  left: 692px;
+  top: 430px;
+
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
-.text {
-  padding-top: 98px;
-  padding-bottom: 98px;
+.features-section {
 }
-.text-title {
+.features-list {
+  display: flex;
+  align-items: center;
+}
+.features-item {
+}
+.features-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -168,32 +154,31 @@ ol {
   text-transform: uppercase;
   color: #212121;
 }
-.text-paragraph {
+.features-text {
   font-size: 14px;
-  line-height: 1.71;
+  line-height: 1.17;
+  text-align: center;
   letter-spacing: 0.03em;
   color: #757575;
 }
-.main-different {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-
-  letter-spacing: 0.03em;
-  color: #212121;
+.different {
 }
 .different-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
-
+  text-align: center;
   letter-spacing: 0.03em;
-
   color: #212121;
 }
 
+.different-list {
+  display: flex;
+  align-items: center;
+}
+.different-item {
+}
 .team {
-  background: #f5f4fa;
 }
 .team-title {
   font-weight: 700;
@@ -203,73 +188,48 @@ ol {
   letter-spacing: 0.03em;
   color: #212121;
 }
-.team-desc {
+.team-list {
+  display: flex;
+  align-items: center;
+}
+.team-item {
+}
+.team-workers {
+}
+.team-worker {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-
-  letter-spacing: 0.03em;
-  color: #212121;
-}
-.team-paragraph {
-  line-height: 1.19;
-
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-/*footer*/
-.footer {
-  font-family: "Roboto", sans-serif;
-  background: #2f303a;
-}
-.footer-adress {
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
-}
-.footer-logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-}
-.footer-span-logo {
-  color: #2196f3;
-}
-.footer-address {
-  font-style: normal;
-
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-}
-.footer-contact {
-  color: rgba(255, 255, 255, 0.6);
-}
-/*portfolio*/
-/*     */
-.main-btn {
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
 }
-.portfol-title {
-  font-size: 18px;
-  line-height: 2px;
-  letter-spacing: 0.06em;
-  color: #212121;
-}
-.portfol-paragraf {
-  line-height: 1.88;
+.team-profession {
+  line-height: 1.19;
+  text-align: center;
   letter-spacing: 0.03em;
   color: #757575;
 }
-.main-btn {
-  cursor: pointer;
+
+.footer {
+}
+.footer-logo {
+}
+.logo-link {
+}
+.footer-contact {
+}
+.footer-contact-list {
+}
+.footer-contact-item {
+}
+.footer-contact-link {
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  color: rgba(255, 255, 255, 0.6);
+}
+.footer-contact-link:hover,
+.footer-contact-link:focus {
+  color: #2196f3;
 }
