--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,20 @@
-.body {
-  font-family: Roboto, sans-serif;
+.site-body {
+  font-family: "Roboto", sans-serif;
   background: #ffffff;
-  color: #212121;
-  letter-spacing: 0.03em;
 }
 .list {
   list-style: none;
+  display: flex;
+  gap: 30px;
 }
 .link {
   text-decoration: none;
+}
+.link:hover {
+  color: #2196f3;
+}
+.link:focus {
+  color: #2196f3;
 }
 p,
 h1,
@@ -24,225 +30,6 @@ ol {
   margin: 0;
   padding-left: 0;
 }
-button {
-  cursor: pointer;
-}
-address {
-  font-style: normal;
-}
 img {
   display: block;
-  max-width: 100%;
-  height: auto;
-}
-.container {
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  outline: 2px solid tomato;
-}
-.logo {
-  font-family: Raleway, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  color: #2196f3;
-  align-items: center;
-  text-align: center;
-}
-
-.header-logo {
-  font-family: "Raleway", sans-serif;
-
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #000000;
-}
-
-.link:hover {
-  color: #2196f3;
-}
-.link:focus {
-  color: #2196f3;
-}
-.header {
-  border-bottom: 1px solid #ececec;
-}
-
-.nav {
-  display: flex;
-  align-items: center;
-}
-.header-nav {
-  display: flex;
-  align-items: center;
-}
-
-.header-nav-list {
-  display: flex;
-  align-items: center;
-}
-
-.header-nav-item {
-  display: flex;
-  align-items: center;
-}
-.header-nav-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #212121;
-  display: flex;
-  align-items: center;
-}
-.header-nav-link.current {
-  color: #2196f3;
-}
-
-.current {
-  color: #2196f3;
-}
-.header-contact-list {
-  display: flex;
-  align-items: center;
-}
-.header-contact-item {
-}
-.header-contact-link {
-}
-.hero {
-  padding-top: 200px;
-  padding-bottom: 280px;
-  background-color: #2f303a;
-  text-align: center;
-}
-.hero-title {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-
-  color: #ffffff;
-}
-.hero-btn {
-  display: inline-block;
-  width: 216px;
-  height: 50px;
-  left: 692px;
-  top: 430px;
-
-  background: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-}
-.features-section {
-}
-.features-list {
-  display: flex;
-  align-items: center;
-}
-.features-item {
-}
-.features-title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #212121;
-}
-.features-text {
-  font-size: 14px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-.different {
-}
-.different-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
-}
-
-.different-list {
-  display: flex;
-  align-items: center;
-}
-.different-item {
-}
-.team {
-}
-.team-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
-}
-.team-list {
-  display: flex;
-  align-items: center;
-}
-.team-item {
-}
-.team-workers {
-}
-.team-worker {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
-}
-.team-profession {
-  line-height: 1.19;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-
-.footer {
-  background: #2f303a;
-}
-.footer-logo {
-  font-family: "Raleway", sans-serif;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #000000;
-}
-.logo-link {
-}
-.footer-contact {
-  font-size: 14px;
-  line-height: 1.71;
-  color: #ffffff;
-}
-.footer-contact-list {
-}
-.footer-contact-item {
-}
-.footer-contact-link {
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  color: rgba(255, 255, 255, 0.6);
-}
-.footer-contact-link:hover,
-.footer-contact-link:focus {
-  color: #2196f3;
 }
