--- a/css/styles.css
+++ b/css/styles.css
@@ -33,3 +33,174 @@ ol {
 img {
   display: block;
 }
+
+.header {
+  background: #ffffff;
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  outline: 2px solid tomato;
+}
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+.header-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: #000000;
+}
+.header-list {
+  margin-left: 93px;
+}
+.span-logo {
+  color: #2196f3;
+}
+
+.header-nav-item {
+}
+.header-nav-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+.current {
+  color: #2196f3;
+}
+.header-contact-list {
+  display: flex;
+}
+.header-contact-item {
+}
+.header-contact-mail {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+.header-contact-tel {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+.hero {
+  background: #2f303a;
+  padding-top: 200px;
+  padding-bottom: 200px;
+}
+.hero-title {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding-left: 237px;
+  padding-right: 237px;
+}
+.hero-btn {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  margin: 0 auto;
+  display: flex;
+  padding: 10px 32px;
+  background-color: #2196f3;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+.features {
+  margin-top: 94px;
+  margin-bottom: 94px;
+}
+/* hidden .benefits {}*/
+.features-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #212121;
+  margin-bottom: 10px;
+}
+.features-text {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.different {
+  padding-bottom: 94px;
+}
+.different-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03pm;
+  color: #212121;
+  margin-bottom: 50px;
+}
+.different-item {
+}
+.team {
+  background-color: #f5f4fa;
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.team-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03pm;
+  color: #212121;
+  margin-bottom: 50px;
+}
+.team-list {
+}
+.team-img {
+}
+.team-worker {
+}
+.team-profession {
+}
+.footer {
+}
+.footer-logo {
+}
+.logo {
+}
+.footer-contact {
+}
+.footer-contact-list {
+}
+.footer-contact-gps {
+}
+.footer-contact-mail {
+}
+.footer-contact-tel {
+}
