--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,7 @@ img {
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
-  letter-spacing: 0.03pm;
+  letter-spacing: 0.03em;
   color: #212121;
   margin-bottom: 50px;
 }
@@ -181,16 +181,38 @@ img {
   margin-bottom: 50px;
 }
 .team-list {
+  padding-bottom: 94px;
 }
 .team-img {
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .team-worker {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 .team-profession {
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #757575;
+  margin-bottom: 30px;
 }
 .footer {
+  background-color: #2f303a;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .footer-logo {
+  font-family: "Raleway";
 }
 .logo {
 }
