--- a/css/styles.css
+++ b/css/styles.css
@@ -241,4 +241,10 @@ img {
   letter-spacing: 0.03;
 }
 .footer-contact-tel {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
+
+/*portfol*/
