--- a/css/styles.css
+++ b/css/styles.css
@@ -69,9 +69,9 @@ img {
 .span-logo {
   color: #2196f3;
 }
-
+/*
 .header-nav-item {
-}
+}*/
 .header-nav-link {
   font-weight: 500;
   font-size: 14px;
@@ -85,8 +85,8 @@ img {
 .header-contact-list {
   display: flex;
 }
-.header-contact-item {
-}
+/*.header-contact-item {
+}*/
 .header-contact-mail {
   font-weight: 500;
   font-size: 14px;
@@ -164,8 +164,9 @@ img {
   color: #212121;
   margin-bottom: 50px;
 }
+/*
 .different-item {
-}
+}*/
 .team {
   background-color: #f5f4fa;
   padding-top: 94px;
@@ -248,3 +249,41 @@ img {
 }
 
 /*portfol*/
+
+.section-portfolio {
+  margin-top: 94px;
+}
+.portfolio-main-btn {
+}
+.portfolio-btn {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+/*.container-list {
+}*/
+.card-list {
+  box-sizing: border-box;
+  background-color: #ffffff;
+  border: 1px solid #eeeeee;
+}
+/*.img {
+}*/
+.portfolio-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: #212121;
+  padding-left: 24px;
+}
+.portfolio-paragrapf {
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  color: #757575;
+  padding-left: 24px;
+}
