--- a/css/styles.css
+++ b/css/styles.css
@@ -114,8 +114,9 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
-  padding-left: 237px;
-  padding-right: 237px;
+  width: 696px;
+  margin-right: auto;
+  margin-left: auto;
 }
 .hero-btn {
   font-family: inherit;
@@ -144,7 +145,7 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #212121;
-  margin-bottom: 10px;
+  padding-bottom: 10px;
 }
 .features-text {
   font-size: 14px;
@@ -181,9 +182,7 @@ img {
   color: #212121;
   margin-bottom: 50px;
 }
-.team-list {
-  padding-bottom: 94px;
-}
+
 .team-img {
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -197,15 +196,16 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
-  margin-top: 30px;
-  margin-bottom: 10px;
 }
 .team-profession {
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
   color: #757575;
-  margin-bottom: 30px;
+}
+.team-worker-profession {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .footer {
   background-color: #2f303a;
@@ -253,8 +253,8 @@ img {
 .section-portfolio {
   margin-top: 94px;
 }
-.portfolio-main-btn {
-}
+/* .portfolio-main-btn {
+} */
 .portfolio-btn {
   font-family: inherit;
   font-weight: 500;
