--- a/css/styles.css
+++ b/css/styles.css
@@ -263,9 +263,17 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
+  background-color: #2196f3;
+  border: none;
+  /* padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+  padding-left: 10px; */
 }
-/*.container-list {
-}*/
+/* .container-list {
+ 
+
+} */
 .card-list {
   box-sizing: border-box;
   background-color: #ffffff;
@@ -286,4 +294,9 @@ img {
   letter-spacing: 0.03em;
   color: #757575;
   padding-left: 24px;
+}
+.container-portfolio {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
