--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,7 @@ img {
 }
 /* .portfolio-main-btn {
 } */
-.portfolio-btn {
+.portfolio-main-btn {
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -299,4 +299,5 @@ img {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
+  background-color: aqua;
 }
