--- a/css/styles.css
+++ b/css/styles.css
@@ -267,10 +267,14 @@ img {
   padding-bottom: 94px;
 }
 .portfolio-main-btn {
-  margin: 0 auto;
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
+  gap: 8px;
+}
+.portfolio-filter {
+  padding-left: 6px;
+  padding-top: 22px;
 }
 .portfolio-btn {
   font-family: inherit;
@@ -294,19 +298,23 @@ img {
 }
 /*.img {
 }*/
+.portfolio-text {
+  padding-left: 20px;
+  padding-top: 24px;
+  border: 1px solid #eeeeee;
+  border-top: none;
+}
 .portfolio-title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: #212121;
-  padding-left: 24px;
 }
 .portfolio-paragrapf {
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: #757575;
-  padding-left: 24px;
 }
 .container-portfolio {
   width: 1200px;
