--- a/css/styles.css
+++ b/css/styles.css
@@ -285,10 +285,22 @@ img {
   letter-spacing: 0.03em;
   color: #212121;
   border: none;
-  background: #2196f3;
+
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
+}
+.hero-btn:focus. {
+  color: #212121;
+}
+.hero-btn:hover {
+  color: #212121;
+}
+
+.portfolio-btn:focus,
+.portfolio-btn:hover {
+  color: #ffffff;
+  background-color: #2196f3;
 }
 
 .card-list {
