--- a/css/styles.css
+++ b/css/styles.css
@@ -323,11 +323,6 @@ img {
   background-color: #2196f3;
 }
 
-.card-list {
-  box-sizing: border-box;
-  background-color: #ffffff;
-  border: 1px solid #eeeeee;
-}
 /*.img {
 }*/
 .portfolio-text {
@@ -357,10 +352,12 @@ img {
   margin-left: auto;
   margin-right: auto;
   justify-content: center;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .card-list {
   display: flex;
   flex-wrap: wrap;
-  flex-basis: calc(100% / 3);
-  margin-bottom: 50px;
 }
